# Tmp3

./: .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  ADVANCED_ENGINE_ARCHITECTURE.md  ADVANCED_ENGINE_STATUS.md  API_ENGINE_UPDATES_REQUIRED.md  API_ISSUES_FOUND.md  AUDIT_COMPLETE_SUMMARY.txt  AUDIT_COMPLETION_SUMMARY.md  AUDIT_SUMMARY.txt  BINGX_API_COMPLIANCE_VERIFICATION.md  BINGX_API_INTEGRATION_BEST_PRACTICES.md  BINGX_API_SKILLS_ADDED.md  BINGX_API_SKILLS_IMPLEMENTATION.md  BINGX_API_SKILLS_INTEGRATION_GUIDE.md  CHANGES_VERIFICATION_REPORT.md  CHANGES_VERIFIED.md  COMPLETE_PROGRESSION_TEST_READY.md  COMPLETION_CHECKLIST.md  COMPREHENSIVE_FIXES_APPLIED.md  COMPREHENSIVE_FIXES_COMPLETE.md  COMPREHENSIVE_FIX_APPLIED.txt  COMPREHENSIVE_FIX_SUMMARY.md  COMPREHENSIVE_ORDER_TESTING_REPORT.md  COMPREHENSIVE_PROCESSOR_TEST_REPORT.md  COMPREHENSIVE_PROGRESSIONS_FIX.md  COMPREHENSIVE_STATS_AUDIT_COMPLETE.md  COMPREHENSIVE_TEST_EXECUTION_GUIDE.md  CONNECTION_SETTINGS_FIX_COMPREHENSIVE.md  CRITICAL_API_CREDENTIALS_BUG_FIX.md  CRITICAL_FIX_INDICATION_DATAFLOW.md  CYCLE_COUNTING_FIX.md  DATABASE_INTEGRITY_VERIFICATION.md  DATA_FIXES_COMPLETE.md  DEBUG_AND_QUICKSTART_GUIDE.md  DEBUG_MODE_ACTIVE.md  DEBUG_MODE_INDEX.md  DEBUG_MODE_QUICK_START.md  DEPLOYMENT.md  (+130 more)
.v0-data/: redis-snapshot.json  redis-snapshot.json.corrupt-1778013612699  redis-snapshot.json.tmp
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx  page.tsx.backup-experimental
backup/: local-redis.tsx.tmp  pre-startup.ts.tmp
components/: app-sidebar.tsx  dashboard-shell.tsx  (+16 more)
(+620 files in other folders)
